--- a/index.html
+++ b/index.html
@@ -17,27 +17,27 @@
             <ul>
                 <hr>
                 <li id="pedra" 
-                    onmouseover="entrou('pedra')" 
-                    onmouseout="saiu('pedra')" 
+                    onmouseover="ColorAndTransparence('pedra', '50, 50, 255', '0.750')" 
+                    onmouseout="ColorAndTransparence('pedra', '50, 50, 255', '1')" 
                     onclick="clicou('Pedra')">
                     Pedra
                 </li>
                 <li id="papel" 
-                    onmouseover="entrou('papel')" 
-                    onmouseout="saiu('papel')" 
+                    onmouseover="ColorAndTransparence('papel', '50, 50, 255', '0.750')" 
+                    onmouseout="ColorAndTransparence('papel', '50, 50, 255', '1')"  
                     onclick="clicou('Papel')">
                     Papel
                 </li>
                 <li id="tesoura" 
-                    onmouseover="entrou('tesoura')" 
-                    onmouseout="saiu('tesoura')" 
+                    onmouseover="ColorAndTransparence('tesoura', '50, 50, 255', '0.750')" 
+                    onmouseout="ColorAndTransparence('tesoura', '50, 50, 255', '1')" 
                     onclick="clicou('Tesoura')">
                     Tesoura
                 </li>
                 <hr>
                 <li id="reiniciar" 
-                    onmouseover="entrou('reiniciar')"   
-                    onmouseout="saiu('reiniciar')" 
+                    onmouseover="ColorAndTransparence('reiniciar', '255, 0, 0', '0.750')" 
+                     onmouseout="ColorAndTransparence('reiniciar', '255, 0, 0', '1')"  
                     onclick="reiniciar()">
                     Reiniciar
                 </li>
